updates to do some ajax

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
 		</header>
 		<div class="content">
 			<p>Article content</p>
+			<articles></articles>
 		</div>
 	</article>
 	<aside class="sidebar">
